<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="412sp"
    android:layout_height="600sp"
    tools:context=".organization.OrganizationHomeFragment" >

    <TextView
        android:id="@+id/phoneOrgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="phone: (null)"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailOrgText"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/emailOrgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="email: (null)"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idOrgText"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/idOrgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:text="ID: (null)"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePictureOrg"
        app:layout_constraintVertical_bias="0.108" />

    <ImageView
        android:id="@+id/profilePictureOrg"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_marginBottom="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/welcomeOrgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome, (null)"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginBottom="316dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeOrgText"
        app:layout_constraintVertical_bias="0.066" >

        <Button
            android:id="@+id/settingsOrgBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Settings" />

        <Button
            android:id="@+id/logoutOrgBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Logout" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>