<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="412sp"
    android:layout_height="600sp"
    tools:context="organization.OrganizationPostsCreateFragment">

    <TextView
        android:id="@+id/create_posts_servington"
        android:layout_width="418dp"
        android:layout_height="49dp"
        android:layout_marginBottom="71dp"
        android:background="#FF9800"
        android:text="Servington"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/create_posts_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/create_posts_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="#B6B6B6"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Title"
        app:layout_constraintBottom_toTopOf="@+id/create_post_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_posts_servington" />

    <EditText
        android:id="@+id/create_post_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="31dp"
        android:background="#B6B6B6"
        android:ems="10"
        android:foregroundTint="#00FFFFFF"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:text="description"
        app:layout_constraintBottom_toTopOf="@+id/button_create_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_post_date" />

    <Button
        android:id="@+id/button_create_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="Create Post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_post_description" />

    <EditText
        android:id="@+id/create_post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="#B6B6B6"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="date"
        app:layout_constraintBottom_toTopOf="@+id/create_post_description"
        app:layout_constraintStart_toStartOf="@+id/create_posts_title"
        app:layout_constraintTop_toBottomOf="@+id/create_posts_title" />
</androidx.constraintlayout.widget.ConstraintLayout>

